Snav: Search inside focused scroll containers

Previously, spatial navigation could not navigate inside a focused
container. This change makes spatnav first search (or scroll) a
focused scroll container, before searching outside of it:

(1) Search for focusable elements inside any focused container.
(2) If step (1) couldn't find a candidate, try to scroll the container.
(3) If step (2) couldn't scroll, search for focusable elements outside
    the container.

This follows the design document: https://bit.ly/snav2.

Bug: 821297
Change-Id: I81ab360dac5ee865e34c0f840378c9a637a8fe89
Reviewed-on: https://chromium-review.googlesource.com/c/960185
Commit-Queue: JunHo Seo <junho0924.seo@lge.com>
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Reviewed-by: Hugo Holgersson <hugoh@vewd.com>
Cr-Commit-Position: refs/heads/master@{#614341}
Former-commit-id: 0d17b741996e047d7aaf439dcb22ef7359e8f52b